--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          
         </div>
 
         <div class="row skills-content">
@@ -263,7 +263,7 @@
               <h4>Hà Thụy Ngọc Khánh</h4>
               <p><em>I'm a newly-graduated student majoring Softwave Engineering.</em></p>
               <ul>
-                <li>87, D3 street, Ward Phuong Long B, Thu Duc city</li>
+                <li>Thu Duc City, VietNam</li>
                 <li>(+84) 0334 657 677</li>
                 <li>hakhanh1998@gmail.com</li>
               </ul>
