--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://github.com/KhanhHa2708</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>hakhanh1998@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -286,6 +286,15 @@
               <p><em>Waseco building, Tan Binh, Ho Chi Minh City </em></p>
               <ul>
                 <li>Position: Intern at AngularJS team </li>
+                
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>SUTRIX SOLUTIONS</h4>
+              <h5>7/2021 - 4/2022</h5>
+              <p><em>BlueSky building, Tan Binh, Ho Chi Minh City </em></p>
+              <ul>
+                <li>Position: Fresher QA </li>
                 
               </ul>
             </div>
