--- a/index.html
+++ b/index.html
@@ -281,7 +281,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title"> Experience</h3>
             <div class="resume-item">
-
+              <h4>FUJINET SYSTEMS JSC</h4>
+              <h5>4/2020 - 12/2020</h5>
+              <p><em>Waseco building, Tan Binh, Ho Chi Minh City </em></p>
+              <ul>
+                <li>Position: Intern at AngularJS team </li>
+                
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>SUTRIX SOLUTIONS</h4>
               <h5>7/2021 - 4/2022</h5>
