--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Hà Thụy Ngọc Khánh</h1>
-      <p> <span class="typed" data-typed-items="I'm Developer, Welcome to my world, Life is a story. Make yours the best seller."></span></p>
+      <p> <span class="typed" data-typed-items="I'm Developer and QA, Welcome to my world, Life is a story. Make yours the best seller."></span></p>
     </div>
   </section><!-- End Hero -->
 
