--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm a Frontend & Web Fresher</p>
+          <p>I'm a Frontend and QA Fresher</p>
         </div>
 
         <div class="row">
