--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img src="assets/img/Khanh.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Frontend Fresher &amp; Web Fresher.</h3>
+            <h3>Frontend Fresher &amp; QA Fresher.</h3>
             <p class="fst-italic">
             </p>
             <div class="row">
